--- a/index.html
+++ b/index.html
@@ -10,34 +10,6 @@
 </head>
 
 <body>
-	<!-- Navigation -->
-	<nav class="site-navigation">
-		<div class="site-navigation-inner site-container">
-			<img src="./images/site-logo.png" alt="site logo">
-			<div class="main-navigation">
-				<ul class="main-navigation__ul">
-					<li><a href="#">Homepage</a></li>
-					<li><a href="#">Page 1</a></li>
-					<li><a href="#">Page 2</a></li>
-					<li><a href="#">Page 3</a></li>
-					<li><a href="#">Page 4</a></li>
-				</ul>
-			</div>
-			<div id="myBtn" class="burger-container" onclick="myFunction(this)">
-				<div class="bar1"></div>
-				<div class="bar2"></div>
-				<div class="bar3"></div>
-			</div>
-			<script>
-				function myFunction(x) {
-					x.classList.toggle("change");
-				}
-			</script>
-
-		</div>
-	</nav>
-	<!-- Navigation end -->
-
 	<!-- Top banner -->
 	<section class="fh5co-top-banner">
 		<div class="top-banner__inner site-container">
@@ -82,7 +54,7 @@
 							- Poduction of applications with low-code tools for company sectors - Power Apps, Power Automate;<br>
 							- Daily use of Trello to monitor projects and personal management -  kanban methodology;</p>
 						<h4>GT Group</h4>
-						<p class="p-white"> 07/2022 - 08/2023</p>
+						<p class="p-white"> 07 / 2022 to 08 / 2023</p>
 					</div>
 					<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">Professional Experience #2</h2>
@@ -91,7 +63,7 @@
 							- Monitoring all stages of the sales funnel - Pipedrive, Meetime | CRM; <br>
 							- Periodic data collection - Google Data Studio and Google Sheets.</p>
 						<h4>GT Group</h4>
-						<p class="p-white"> 07/2021 - 07/2022</p>
+						<p class="p-white"> 07 / 2021 to 07 / 2022</p>
 					</div>
 				</div>
 			</div>
@@ -316,8 +288,8 @@
 			<div class="social">
 				<h5>△</h5>
 				<div class="social-icons">
-					<a href="#" target="_blank"><img src="./images/social-linkedin.png" alt="social icon" height="35" width="34"></a>
-					<a href="#" target="_blank"><img src="./images/social-Github.png" alt="social icon" height="35" width="34"></a>
+					<a href="https://www.linkedin.com/in/tamirys-oliveira/" target="_blank"><img src="./images/social-linkedin.png" alt="social icon" height="35" width="34"></a>
+					<a href="https://github.com/TamirysOliveira" target="_blank"><img src="./images/social-Github.png" alt="social icon" height="35" width="34"></a>
 				</div>
 				<h5>△</h5>
 			</div>
