--- a/index.html
+++ b/index.html
@@ -304,12 +304,12 @@
 				<div class="footer-info">
 					<div class="footer-info__left">
 						<img src="./images/footer-img.jpg" alt="about me image">
-						<p><a href="https://www.docdroid.net/s945rmf/curriculo-a-pdf" style="color: white">Curriculum (pt-BR)</a></p>
-						<p><a href="https://www.docdroid.net/C2NmICd/encurriculo-a-pdf" style="color: white">Curriculum (EN)</a></p>
+						<p><a href="https://www.docdroid.net/Oc3mpcR/curriculotamirysport-pdf" style="color: white">Curriculum (pt-BR)</a></p>
+						<p><a href="https://www.docdroid.net/pSoRK4c/curriculotamiryseng-pdf" style="color: white">Curriculum (EN)</a></p>
 					</div>
 					<div class="footer-info__right">
 						<h5>Get In Touch</h5>
-						<p class="footer-phone">Phone: +55 21 975957171</p>
+						<p class="footer-phone" style="color: white">Phone: +55 21 975957171</p>
 						<p>Email : t.luamar@icloud.com</p>
 					</div>
 				</div>
