--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 	</section>
 	<!-- Certificates end -->
 
-	<!-- Quotes -->
+	<!-- Educational -->
 	<section class="fh5co-quotes">
 		<div class="site-container">
 			<div class="about-me-slider">
@@ -280,7 +280,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- Quotes end -->
+	<!-- Educational end -->
 
 	<!-- Social -->
 	<section class="fh5co-social">
@@ -309,7 +309,7 @@
 					</div>
 					<div class="footer-info__right">
 						<h5>Get In Touch</h5>
-						<p class="footer-phone" style="color: white">Phone: +55 21 975957171</p>
+						<p class="footer-phone"><a href="#" style="color:white">Phone: +55 21 975957171</a></p>
 						<p>Email : t.luamar@icloud.com</p>
 					</div>
 				</div>
