--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						</div>
 					</a>
 					<h4 class="single-book__title">Power BI</h4>
-					<span class="single-book__price"><a href="https://pt.anotepad.com/notes/3bt7sq8c">Leia sobre</span>
+					<span class="single-book__price"><a href="https://pt.anotepad.com/notes/3bt7sq8c">READ ABOUT</span>
 				</div>
 
 				<div class="single-book">
@@ -98,7 +98,7 @@
 						</div>
 					</a>
 					<h4 class="single-book__title">Power BI</h4>
-					<span class="single-book__price"><a href="https://pt.anotepad.com/notes/qemd6y76">Leia sobre</span>
+					<span class="single-book__price"><a href="https://pt.anotepad.com/notes/qemd6y76">READ ABOUT</span>
 				</div>
 
 				<div class="single-book">
@@ -109,7 +109,7 @@
 						</div>
 					</a>
 					<h4 class="single-book__title">SQL</h4>
-					<span class="single-book__price"><a href="https://anotepad.com/notes/njgkxe7e">Lei sobre</span>
+					<span class="single-book__price"><a href="https://anotepad.com/notes/njgkxe7e">READ ABOUT</span>
 				</div>
 
 				<div class="single-book">
