--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<!-- Top banner -->
-	<section class="fh5co-top-banner">
+	<section class="my-top-banner">
 		<div class="top-banner__inner site-container">
 			<div class="top-banner__image">
 				<img src="./images/top-banner-author.png" alt="author image">
@@ -32,7 +32,7 @@
 	<!-- Top banner end -->
 
 	<!-- About me -->
-	<section class="fh5co-about-me">
+	<section class="about-me">
 		<div class="about-me-inner site-container">
 			<article class="portfolio-wrapper">
 				<div class="portfolio__img">
@@ -73,7 +73,7 @@
 	<!-- About me end -->
 
 	<!-- My Projects -->
-	<section class="fh5co-books">
+	<section class="my-books">
 		<div class="site-container">
 			<h2 class="universal-h2 universal-h2-bckg">My projects</h2>
 
@@ -132,7 +132,7 @@
 	<!-- My Projects end -->
 
 	<!-- Certificates -->
-	<section class="fh5co-blog">
+	<section class="my-blogs">
 		<div class="site-container">
 			<h2 class="universal-h2 universal-h2-bckg">Certificates</h2>
 			<div class="blog-slider blog-inner">
@@ -262,7 +262,7 @@
 	<!-- Certificates end -->
 
 	<!-- Educational -->
-	<section class="fh5co-quotes">
+	<section class="my-quotes">
 		<div class="site-container">
 			<div class="about-me-slider">
 				<div>
@@ -283,7 +283,7 @@
 	<!-- Educational end -->
 
 	<!-- Social -->
-	<section class="fh5co-social">
+	<section class="my-social">
 		<div class="site-container">
 			<div class="social">
 				<h5>△</h5>
