--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
 				<div class="footer-info">
 					<div class="footer-info__left">
 						<img src="./images/footer-img.jpg" alt="about me image">
-						<p><a href="https://www.docdroid.net/Oc3mpcR/curriculotamirysport-pdf" style="color: white">Curriculum (pt-BR)</a></p>
-						<p><a href="https://www.docdroid.net/pSoRK4c/curriculotamiryseng-pdf" style="color: white">Curriculum (EN)</a></p>
+						<p><a href="https://smallpdf.com/pt/file#s=c0886fe2-01b1-4354-8263-822eab9be411" style="color: white">Curriculum (pt-BR)</a></p>
+						<p><a href="https://smallpdf.com/pt/file#s=0d2832ae-3f61-4f81-b4d5-491e9107ecdb" style="color: white">Curriculum (EN)</a></p>
 					</div>
 					<div class="footer-info__right">
 						<h5>Get In Touch</h5>
