--- a/index.html
+++ b/index.html
@@ -48,22 +48,19 @@
 			<div class="about-me__text">
 				<div class="about-me-slider">
 					<div class="about-me-single-slide">
-						<h2 class="universal-h2 universal-h2-bckg">Professional Experience #1</h2>
-						<p>- Performed internal structuring and requirements gathering, using appropriate tools - LucidChart, Draw.io DBDesigner;<br>
-							- Data analysis, together with the squad, from different sources - Power BI / Power Query, Excel, Sharepoint, MySQL and Python (to a lesser extent);<br>
-							- Poduction of applications with low-code tools for company sectors - Power Apps, Power Automate;<br>
-							- Daily use of Trello to monitor projects and personal management -  kanban methodology;</p>
+						<h2 class="universal-h2 universal-h2-bckg">Professional Experience #1 <br> Business Intelligence Assistant</h2>
+						<p>Requirement gathering and data analysis within the intelligence team using Kanban Method; Entity-relationship model preparation; Daily use of BI tools such as <p style="color:Tomato;">Power BI, Power
+							Query, and Excel</p>; Assistance to the database specialist in <p style="color:Tomato;">SQL</p> language; Construction of indicator automations with <p style="color:Tomato;">Power Automate</p>; Reporting on analysis results; Self-task
+							management</p>
 						<h4>GT Group</h4>
-						<p class="p-white"> 07 / 2022 to 08 / 2023</p>
+						<p class="p-white"> 07 / 2021 to 08 / 2023</p>
 					</div>
 					<div class="about-me-single-slide">
-						<h2 class="universal-h2 universal-h2-bckg">Professional Experience #2</h2>
-						<p>- Worked as Lead Development Representative in kanban methodology with Database maintenance - Excel;<br>
-							- Prospecting and confirming the Ideal Customer Profile - Snovio.io, Skrapp.io, Sales Navigator; <br>
-							- Monitoring all stages of the sales funnel - Pipedrive, Meetime | CRM; <br>
-							- Periodic data collection - Google Data Studio and Google Sheets.</p>
-						<h4>GT Group</h4>
-						<p class="p-white"> 07 / 2021 to 07 / 2022</p>
+						<h2 class="universal-h2 universal-h2-bckg">Professional Experience #2 <br> Data Analyst </h2>
+						<p>Production and maintenance of the company's indicator dataset; Conducting exploratory analyses; Trend identification using tools such as <p style="color:Tomato;">Google Sheets, Google Data Studio</p>;
+							Maintenance of database automations using scripts; Responsible for exporting and securing reports to the database; Self-management.</p>
+						<h4>BRASIL TECPAR SERVICOS DE TELECOMUNICACOES S.A.</h4>
+						<p class="p-white"> 07 / 2021 to 08 / 2023</p>
 					</div>
 				</div>
 			</div>
