--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 				<div class="about-me-slider">
 					<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">Professional Experience #1 <br> Business Intelligence Assistant</h2>
-						<p>Requirement gathering and data analysis within the intelligence team using Kanban Method; Entity-relationship model preparation; Daily use of BI tools such as <p style="color:Tomato;">Power BI, Power
-							Query, and Excel</p>; Assistance to the database specialist in <p style="color:Tomato;">SQL</p> language; Construction of indicator automations with <p style="color:Tomato;">Power Automate</p>; Reporting on analysis results; Self-task
-							management</p>
+						<p>Requirement gathering and data analysis within the intelligence team using Kanban Method; Entity-relationship model preparation; Daily use of BI tools such as <span style="color:Tomato;">Power BI, Power
+							Query, and Excel</span>; Assistance to the database specialist in <span style="color:Tomato;">SQL</span> language; Construction of indicator automations with 
+							<span style="color:Tomato;">Power Automate</span>; Reporting on analysis results; Self-task management</p>
 						<h4>GT Group</h4>
 						<p class="p-white"> 07 / 2021 to 08 / 2023</p>
 					</div>
 					<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">Professional Experience #2 <br> Data Analyst </h2>
-						<p>Production and maintenance of the company's indicator dataset; Conducting exploratory analyses; Trend identification using tools such as <p style="color:Tomato;">Google Sheets, Google Data Studio</p>;
-							Maintenance of database automations using scripts; Responsible for exporting and securing reports to the database; Self-management.</p>
+						<p>Production and maintenance of the company's indicator dataset; Conducting exploratory analyses; Trend identification using tools such as <span style="color:Tomato;">Google Sheets, Google Data Studio</span>;
+							Maintenance of <span style="color:Tomato;">database automations</span> using scripts; Responsible for exporting and securing reports to the database; Self-management.</p>
 						<h4>BRASIL TECPAR SERVICOS DE TELECOMUNICACOES S.A.</h4>
 						<p class="p-white"> 07 / 2021 to 08 / 2023</p>
 					</div>
