--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<h2 class="universal-h2 universal-h2-bckg">Professional Experience #2 <br> Data Analyst </h2>
 						<p>Production and maintenance of the company's indicator dataset; Conducting exploratory analyses; Trend identification using tools such as Google Sheets, Google Data Studio;
 							Maintenance of database automations using scripts; Responsible for exporting and securing reports to the database; Self-management.</p>
-						<h4>BRASIL TECPAR SERVICOS DE TELECOMUNICACOES S.A.</h4>
+						<h4>BRASIL TECPAR</h4>
 						<p class="p-white"> 11 / 2023 to 05 / 2024</p>
 					</div>
 				</div>
