--- a/index.html
+++ b/index.html
@@ -84,18 +84,7 @@
 						</div>
 					</a>
 					<h4 class="single-book__title">Power BI</h4>
-					<span class="single-book__price"><a href="https://pt.anotepad.com/notes/3bt7sq8c">READ ABOUT</span>
-				</div>
-
-				<div class="single-book">
-					<a href="https://app.powerbi.com/view?r=eyJrIjoiZWExNzhkYjYtNmZhZi00YWNjLWJhYzAtZTYzMGQ0ZmM2YjFlIiwidCI6ImQ1MmQwZjM0LTY2YmEtNGVkZC1hMDQ2LWU1ZGUyYmY4NDc4NyJ9&embedImagePlaceholder=true" class="single-book__img">
-						<img src="./images/books-2.png" alt="single book and cd">
-						<div class="single-book_download">
-							<img src="./images/download.svg" alt="book image">
-						</div>
-					</a>
-					<h4 class="single-book__title">Power BI</h4>
-					<span class="single-book__price"><a href="https://pt.anotepad.com/notes/qemd6y76">READ ABOUT</span>
+					<span class="single-book__price"><a href="https://sites.google.com/view/portfoliotamirys?usp=sharing">SEE MY POTFOLIO</span>
 				</div>
 
 				<div class="single-book">
@@ -106,7 +95,6 @@
 						</div>
 					</a>
 					<h4 class="single-book__title">SQL</h4>
-					<span class="single-book__price"><a href="https://anotepad.com/notes/njgkxe7e">READ ABOUT</span>
 				</div>
 
 				<div class="single-book">
@@ -117,7 +105,6 @@
 						</div>
 					</a>
 					<h4 class="single-book__title">JavaScript</h4>
-					<span class="single-book__price"><a href="https://github.com/TamirysOliveira/anosLuz.git">Script</span>
 				</div>
 			</div>
 
