--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 						</div>
 					</a>
 					<h4 class="single-book__title">Power BI</h4>
+					<h4 class="single-book__title">Want to see more?</h4>
 					<span class="single-book__price"><a href="https://sites.google.com/view/portfoliotamirys?usp=sharing">SEE MY POTFOLIO</span>
 				</div>
 
