--- a/index.html
+++ b/index.html
@@ -87,7 +87,16 @@
 					<h4 class="single-book__title">Want to see more?</h4>
 					<span class="single-book__price"><a href="https://sites.google.com/view/portfoliotamirys?usp=sharing">SEE MY POTFOLIO</span>
 				</div>
-
+				<div class="single-book">
+					<a href="https://mlmelbourne-tlos.streamlit.app/" class="single-book__img">
+						<img src="./images/books-2.jpg" alt="single book and cd">
+						<div class="single-book_download">
+							<img src="./images/download.svg" alt="book image">
+						</div>
+					</a>
+					<h4 class="single-book__title">Machine Learning</h4>
+					<h4 class="single-book__title">Melbourne Housing Price Prediction</h4>
+				</div>
 				<div class="single-book">
 					<a href="https://github.com/TamirysOliveira/Modelo-Relacional-referente-ao-estudo-de-caso-de-uma-faculdade.git" class="single-book__img">
 						<img src="./images/books-3.png" alt="single book and cd">
