--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div class="portfolio__name">
 						<h2 class="universal-h2">Objective</h2>
 					</div>
-					<p>Looking for challenging positions in Business Intelligence | Data Analyst | DBA | Entry Level</p>
+					<p>Data analyst, with competence in the creation and maintenance of commercial and academic projects</p>
 				</div>
 			</article>
 			<div class="about-me__text">
@@ -89,7 +89,7 @@
 				</div>
 				<div class="single-book">
 					<a href="https://mlmelbourne-tlos.streamlit.app/" class="single-book__img">
-						<img src="./images/books-2.jpg" alt="single book and cd">
+						<img src="./images/books-2.png" alt="single book and cd">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
