--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 						</div>
 					</a>
 					<h4 class="single-book__title">Power BI</h4>
-					<h4 class="single-book__title">Want to see more?</h4>
-					<span class="single-book__price"><a href="https://sites.google.com/view/portfoliotamirys?usp=sharing">SEE MY POTFOLIO</span>
+					<span class="single-book__price"><a href="https://sites.google.com/view/portfoliotamirys?usp=sharing">Want to see more?</span>
 				</div>
 				<div class="single-book">
 					<a href="https://mlmelbourne-tlos.streamlit.app/" class="single-book__img">
