--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<img src="./images/download.svg" alt="book image">
 						</div>
 					</a>
-					<h4 class="single-book__title">Melbourne Housing Price Prediction</h4>
+					<h4 class="single-book__title">Housing Price Prediction</h4>
 				</div>
 				<div class="single-book">
 					<a href="https://github.com/TamirysOliveira/Modelo-Relacional-referente-ao-estudo-de-caso-de-uma-faculdade.git" class="single-book__img">
