--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 				<div>
 					<h2 class="universal-h2 universal-h2-bckg">Education</h2>
 					<p><h4>Graduation Course in Data Science</h4></p>
-					<p>[in progress/ 3rd period]</p>
+					<p>[in progress/ 4th period]</p>
 					<p>International University Center - Uniter</p>
 				</div>
 				<div>
