--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</div>
 					</a>
 					<h4 class="single-book__title">Power BI</h4>
-					<span class="single-book__price"><a href="https://sites.google.com/view/portfoliotamirys?usp=sharing">Want to see more?</span>
+					<span class="single-book__price"><a href="https://sites.google.com/view/portfoliotamirys/in%C3%ADcio">Want to see more?</span>
 				</div>
 				<div class="single-book">
 					<a href="https://mlmelbourne-tlos.streamlit.app/" class="single-book__img">
@@ -280,7 +280,7 @@
 			<div class="social">
 				<h5>△</h5>
 				<div class="social-icons">
-					<a href="https://www.linkedin.com/in/tamirys-oliveira/" target="_blank"><img src="./images/social-linkedin.png" alt="social icon" height="35" width="34"></a>
+					<a href="https://www.linkedin.com/in/tamiryslos/" target="_blank"><img src="./images/social-linkedin.png" alt="social icon" height="35" width="34"></a>
 					<a href="https://github.com/TamirysOliveira" target="_blank"><img src="./images/social-Github.png" alt="social icon" height="35" width="34"></a>
 				</div>
 				<h5>△</h5>
@@ -296,8 +296,8 @@
 				<div class="footer-info">
 					<div class="footer-info__left">
 						<img src="./images/footer-img.jpg" alt="about me image">
-						<p><a href="https://online.pubhtml5.com/grxbh/rfve/" style="color: white">Curriculum (pt-BR)</a></p>
-						<p><a href="https://online.pubhtml5.com/grxbh/ytgv/" style="color: white">Curriculum (EN)</a></p>
+						<p><a href="https://online.pubhtml5.com/grxbh/cmwk" style="color: white">Curriculum (pt-BR)</a></p>
+						<p><a href="https://online.pubhtml5.com/grxbh/ocqo/" style="color: white">Curriculum (EN)</a></p>
 					</div>
 					<div class="footer-info__right">
 						<h5>Get In Touch</h5>
